fix location on T5

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,13 +4,13 @@ body{
 
 h1 {
 	text-align: left;
-	color: grey;
+	color: white;
 	font-family: helvetica;
 }
 
 .tag{
 	text-align: left;
-	color: grey;
+	color: white;
 	font-family: helvetica;
 }
 
